# crate-inspector

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
examples/: downcast.rs  items.rs
src/: format.rs  lib.rs
tests/: test.rs
