[package]
name = "crate-inspector"
version = "0.2.0"
edition = "2021"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
description = "A library to inspect the public APIs of Rust crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mtshiba/crate-inspector"
documentation = "https://docs.rs/crate-inspector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc-json = "0.9"
rustdoc-types = "0.32"
serde_json = "1.0"

[lib]
path = "src/lib.rs"
